# awx-mcp-server

./: .env.example  .gitignore  AWX_MCP_QUERY_REFERENCE.md  DEPLOYMENT_ARCHITECTURE.md  README.md  TESTING_SUMMARY.md  test_aap_support.py
docs/: QUICKREF.md  vscode-settings-examples.json
server/: .gitignore  CHANGELOG.md  Dockerfile  GITHUB_INSTALLATION.md  MCP_REGISTRY_PUBLISHING.md  PRODUCTION_READY_SUMMARY.md  README.md  REMOTE_CLIENT_SETUP.md  TWO_KEYS_QUICK_REFERENCE.md  docker-compose.yml  manifest.json  pyproject.toml  server.json  test_awx_connection.py
tests/: README.md  conftest.py  run_tests.py  test_config.py  test_connection.py  test_domain.py  test_env_management.py  test_job_cancel.py  test_job_events.py  test_job_failure_summary.py  test_job_get.py  test_job_launch.py  test_job_stdout.py  test_list_inventories.py  test_list_jobs.py  test_list_projects.py  test_list_templates.py  test_mcp_integration.py  test_parsing.py  test_project_update.py  test_server.py
vscode-extension/: .gitignore  .vscodeignore  Makefile  README.md  TEST_GUIDE.md  build.ps1  marketplace-prep.ps1  marketplace-prep.sh  mcp-config-examples.json  package-lock.json  package.json  tsconfig.json
vscode-extension/bundled/awx-mcp-server/: README.md  pyproject.toml
vscode-extension/bundled/awx-mcp-server/libs/awx_mcp_server/: __init__.py  cli.py  http_server.py
vscode-extension/bundled/awx-mcp-server/libs/awx_mcp_server/clients/: rest_client.py
vscode-extension/bundled/awx-mcp-server/libs/awx_mcp_server/storage/: config.py
vscode-extension/bundled/awx-mcp-server/src/awx_mcp_server/clients/: __init__.py  composite_client.py  rest_client.py
vscode-extension/bundled/awx-mcp-server/src/awx_mcp_server/domain/: exceptions.py
vscode-extension/bundled/awx-mcp-server/src/awx_mcp_server/utils/: logging.py  parsing.py
(+86 files in other folders)
