[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awx-mcp-server"
version = "1.0.0"
description = "AWX MCP Server - Model Context Protocol server for AWX/Ansible Tower"
requires-python = ">=3.10"
authors = [
    {name = "AWX MCP Team", email = "info@awx-mcp.dev"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["awx", "ansible", "tower", "mcp", "model-context-protocol", "github-copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
awx-mcp-server = "awx_mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/awx-mcp/awx-mcp-python"
Documentation = "https://github.com/awx-mcp/awx-mcp-python/docs"
Repository = "https://github.com/awx-mcp/awx-mcp-python"
Issues = "https://github.com/awx-mcp/awx-mcp-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
awx_mcp_server = ["py.typed"]
